[project]
name = "tapostreamer"
authors = [
    {name = "Rio Fujita", email = "rifujita@microsoft.com"},
]
version = "0.1.0"
license = {file = "LICENSE"}
description = "TapoStreamer is an Python application that shows the video streaming from the cameras made by TP-Link."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keyring>=25.6.0",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
]

[project.scripts]
tapostreamer = "tapostreamer.main:main"

[project.urls]
Homepage = "https://github.com/rioriost/tapostreamer"
Issues = "https://github.com/rioriost/tapostreamer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tapostreamer"]
