[project]
name = "tapostreamer"
authors = [
    {name = "Rio Fujita", email = "rifujita@microsoft.com"},
]
version = "0.3.7"
license = {file = "LICENSE"}
description = "TapoStreamer is an Python application that shows the video streaming from the cameras made by TP-Link."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
dependencies = [
    "keyring>=25.6.0",
    "opencv-python>=4.12.0.88",
]

[project.scripts]
tapostreamer = "tapostreamer.main:main"

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-tapostreamer"
Issues = "https://github.com/rioriost/homebrew-tapostreamer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tapostreamer"]

[tool.hatch.build.targets.sdist]
include = [
  "src/tapostreamer/*.py",
  "*.py",
]
exclude = [
  "tapostreamer.rb",
  "uv.lock",
  "dist/.DS_Store",
  ".envrc",
]
